Parse Body__c in resource

--- a/force-app/main/default/classes/ResourceTriggerHandler.cls
+++ b/force-app/main/default/classes/ResourceTriggerHandler.cls
@@ -11,6 +11,7 @@ public with sharing class ResourceTriggerHandler extends TriggerHandler {
         articleService.validateUpdatedDate(newList);
         articleService.updateRemoveSharing(newList);
         articleService.assignRecordTypeFor3dParty(newList);
+        articleService.getUrlVideoFromBody(newList);
     }
 
     public override void beforeUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
@@ -20,6 +21,7 @@ public with sharing class ResourceTriggerHandler extends TriggerHandler {
         articleService.validateUpdatedDate(newList);
         articleService.updateRemoveSharing(newList, (Map<Id, Resource__c>) oldMap);
         articleService.assignRecordTypeFor3dParty(newList);
+        articleService.getUrlVideoFromBody(newList, (Map<Id, Resource__c>) oldMap);
     }
 
     public override void afterInsert(List<SObject> newList) {
