--- a/force-app/main/default/classes/ArticleService.cls
+++ b/force-app/main/default/classes/ArticleService.cls
@@ -5,6 +5,7 @@ public with sharing class ArticleService {
     public static final String HEALTH_DAY_NAME_LOGO = 'HealthDay.png';
     public static final String IQVIA_NAME_LOGO = 'IQVIA.svg';
     public static final String PH_FOLDER_LOGO = 'PH_Default_Image';
+    public static final String REGEX_PARSE_IFRAME = 'Video Link Parse';
 
     public void calculateExpirationDate(List<Resource__c> resources) {
         for (Resource__c resource : resources) {
@@ -98,7 +99,7 @@ public with sharing class ArticleService {
     public void assignRecordTypeFor3dParty(List<Resource__c> resources) {
 
         for (Resource__c resource : resources) {
-            if (resource.Content_Class__c == '3rd Party') {
+            if (resource.Content_Class__c == ResourceService.RESOURCE_SOURCE_THIRD_PARTY) {
                 Id therddpartyRectypeId = SchemaUtil.getRecordTypeIdByName(
                         resource.Content_Type__c,
                         Resource__c.getSObjectType()
@@ -111,10 +112,44 @@ public with sharing class ArticleService {
     public void updateRemoveSharing(List<Resource__c> resources, Map<Id, Resource__c> oldResMap) {
         for (Resource__c resource : resources) {
             if (resource.Expiration_Date__c != null) {
-                if (resource.Expiration_Date__c!= oldResMap.get(resource.Id).Expiration_Date__c) {
+                if (resource.Expiration_Date__c != oldResMap.get(resource.Id).Expiration_Date__c) {
                     this.addSharing(resource);
                 }
             }
+        }
+    }
+
+    public void getUrlVideoFromBody(List<Resource__c> resources) {
+        String regex = this.getRegex(REGEX_PARSE_IFRAME);
+        for (Resource__c resource : resources) {
+            if (ResourceService.RESOURCE_TYPE_VIDEO.equalsIgnoreCase(resource.Content_Type__c)
+                    && ResourceService.RESOURCE_SOURCE_THIRD_PARTY.equalsIgnoreCase(resource.Content_Class__c)
+                    && String.isNotBlank(resource.Body__c)
+                    && String.isBlank(resource.Video__c)) {
+                this.parseBody(resource, regex);
+            }
+        }
+    }
+
+    public void getUrlVideoFromBody(List<Resource__c> newResources, Map<Id, Resource__c> oldResourcesByIds) {
+        String regex = this.getRegex(REGEX_PARSE_IFRAME);
+        for (Resource__c newResource : newResources) {
+            if (ResourceService.RESOURCE_TYPE_VIDEO.equalsIgnoreCase(newResource.Content_Type__c)
+                    && ResourceService.RESOURCE_SOURCE_THIRD_PARTY.equalsIgnoreCase(newResource.Content_Class__c)
+                    && newResource.Body__c != oldResourcesByIds.get(newResource.Id).Body__c) {
+                this.parseBody(newResource, regex);
+            }
+        }
+    }
+
+    private void parseBody(Resource__c resource, String regex) {
+        Matcher matcher = Pattern.compile(regex).matcher(resource.Body__c);
+        if (matcher.find()) {
+            String src = matcher.group(1);
+            String[] splitBody = resource.Body__c.split(regex);
+            String concatBody = String.join(splitBody, '');
+            resource.Video__c = src;
+            resource.Body__c = concatBody;
         }
     }
 
@@ -122,6 +157,15 @@ public with sharing class ArticleService {
         if (resource.Expiration_Date__c > Date.today() && resource.Remove_sharing__c) {
             resource.Remove_sharing__c = false;
         }
+    }
+
+    private String getRegex(String regName) {
+        return [
+                SELECT Id,
+                        Regular_Expression__c
+                FROM Regex__mdt
+                WHERE Label = :regName
+        ][0].Regular_Expression__c;
     }
 
     private String getStaticUrlImage(String imageName) {
