Added test for task service, updated account settings

--- a/force-app/main/default/classes/TaskService.cls
+++ b/force-app/main/default/classes/TaskService.cls
@@ -62,7 +62,7 @@ public without sharing class TaskService {
     
     public List<Task> getTasksCommon(String filter){
         String ownerFilter;
-        if(!ParticipantService.getParticipantState().isDelegate){
+        if(!ParticipantService.getInstance().getState().isDelegate){
             ownerFilter = ' OwnerId = \'' + UserInfo.getUserId() + '\'';
         } else {
             ownerFilter = ' OwnerId = \'' + PatientDelegateService.getInstance().getParticipantUserId() + '\'';
