Tests Updated Country-ZIP not showing fix

--- a/force-app/main/default/classes/AccountSettingsController.cls
+++ b/force-app/main/default/classes/AccountSettingsController.cls
@@ -216,6 +216,8 @@ public without sharing class AccountSettingsController {
                         , BillingCity
                         , Phone
                         , Fax
+                        , BillingPostalCode
+                        , BillingCountry
                 FROM Account
                 WHERE Id = :accountId
         ];
