--- a/force-app/main/default/classes/PatientDelegateService.cls
+++ b/force-app/main/default/classes/PatientDelegateService.cls
@@ -143,13 +143,15 @@ public without sharing class PatientDelegateService {
         if (getDelegatedContactIds().contains(newDelegate.Id)) {
             throw new PatientDelegateServiceException(Label.PG_PST_L_Delegates_WrongAdd);
         }
-        List<Participant__c> participant = [
-                SELECT Id
-                FROM Participant__c
-                WHERE Contact__c = :CommunityService.getUserContact().Id
-        ];
+        List<Participant__c> participant = DatabaseService.getInstance().queryImpl(
+                new List<String>{'Id'},
+                Participant__c.getSObjectType(),
+                DatabaseService.fieldEqual('Contact__c', CommunityService.getUserContact().Id)
+        );
         
-        if (participant.size() == 0) throw new PatientDelegateServiceException('Wrong contact: ' + CommunityService.getUserContact().Id);
+        if (participant.size() == 0) {
+            throw new PatientDelegateServiceException('Wrong contact: ' + CommunityService.getUserContact().Id);
+        }
 
         Patient_Delegate__c delegate = new Patient_Delegate__c(
                 Contact__c = newDelegate.Id,
